{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 183,
  "lineage": "fa3a7752-6929-b325-fa0b-499eca5d1eee",
  "resources": [
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "siege_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20220712",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/rcgnaecomoffshorepdp1000105852/zones/europe-west2-a/disks/siege-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "description": "Stress test the HTTP load balancer",
            "enable_display": false,
            "id": "projects/rcgnaecomoffshorepdp1000105852/zones/europe-west2-a/instances/siege-vm",
            "instance_id": "8556348449123881551",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "startup-script": "#! /bin/bash\nset -euo pipefail\n\nexport DEBIAN_FRONTEND=noninteractive\napt-get update\nsudo apt-get -y install siege\n"
            },
            "metadata_fingerprint": "rUW8rfBvIYs=",
            "name": "siege-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.246.125.70",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/rcgnaecomoffshorepdp1000105852/global/networks/main",
                "network_ip": "10.154.3.18",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/rcgnaecomoffshorepdp1000105852/regions/europe-west2/subnetworks/private-subnet-1",
                "subnetwork_project": "rcgnaecomoffshorepdp1000105852"
              }
            ],
            "project": "rcgnaecomoffshorepdp1000105852",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/rcgnaecomoffshorepdp1000105852/zones/europe-west2-a/instances/siege-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "europe-west2-a"
          },
          "dependencies": [
            "module.networking.google_compute_network.main",
            "module.networking.google_compute_subnetwork.private_subnet_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/rcgnaecomoffshorepdp1000105852/regions/europe-west2/instanceGroups/vm-web-igm",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "cdn_policy": [
              {
                "cache_mode": "CACHE_ALL_STATIC",
                "client_ttl": 3600,
                "default_ttl": 3600,
                "max_ttl": 86400,
                "negative_caching": true,
                "serve_while_stale": 86400,
                "signed_url_cache_max_age_sec": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2022-07-17T04:39:52.511-07:00",
            "custom_request_headers": [
              "X-Client-Geo-Location: {client_region_subdivision}, {client_city}"
            ],
            "custom_response_headers": [
              "X-Cache-Hit: {cdn_cache_status}"
            ],
            "enable_cdn": true,
            "fingerprint": "fxofq4qkAKY=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/rcgnaecomoffshorepdp1000105852/global/healthChecks/autohealing-health-check"
            ],
            "id": "projects/rcgnaecomoffshorepdp1000105852/global/backendServices/l7-xlb-backend-service-8",
            "load_balancing_scheme": "EXTERNAL",
            "name": "l7-xlb-backend-service-8",
            "port_name": "my-port",
            "project": "rcgnaecomoffshorepdp1000105852",
            "protocol": "HTTP",
            "security_policy": "https://www.googleapis.com/compute/v1/projects/rcgnaecomoffshorepdp1000105852/global/securityPolicies/my-policy",
            "self_link": "https://www.googleapis.com/compute/v1/projects/rcgnaecomoffshorepdp1000105852/global/backendServices/l7-xlb-backend-service-8",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "module.networking.data.google_compute_zones.available",
            "module.networking.google_compute_health_check.autohealing",
            "module.networking.google_compute_instance_template.vm_web_template",
            "module.networking.google_compute_network.main",
            "module.networking.google_compute_region_instance_group_manager.vm_web_igm",
            "module.networking.google_compute_security_policy.policy",
            "module.networking.google_compute_subnetwork.private_subnet_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http_https_webs",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-07-16T12:28:52.672-07:00",
            "deny": [],
            "description": "Allow http/https for all source range",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/rcgnaecomoffshorepdp1000105852/global/firewalls/allow-http-https-webs",
            "log_config": [],
            "name": "allow-http-https-webs",
            "network": "https://www.googleapis.com/compute/v1/projects/rcgnaecomoffshorepdp1000105852/global/networks/main",
            "priority": 1000,
            "project": "rcgnaecomoffshorepdp1000105852",
            "self_link": "https://www.googleapis.com/compute/v1/projects/rcgnaecomoffshorepdp1000105852/global/firewalls/allow-http-https-webs",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "web"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.google_compute_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-07-16T12:28:52.678-07:00",
            "deny": [],
            "description": "Allow http/https for all source range",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/rcgnaecomoffshorepdp1000105852/global/firewalls/allow-ssh-main",
            "log_config": [],
            "name": "allow-ssh-main",
            "network": "https://www.googleapis.com/compute/v1/projects/rcgnaecomoffshorepdp1000105852/global/networks/main",
            "priority": 1000,
            "project": "rcgnaecomoffshorepdp1000105852",
            "self_link": "https://www.googleapis.com/compute/v1/projects/rcgnaecomoffshorepdp1000105852/global/firewalls/allow-ssh-main",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.google_compute_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw-iap",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-07-17T08:12:39.876-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/rcgnaecomoffshorepdp1000105852/global/firewalls/l7-xlb-fw-allow-iap-hc",
            "log_config": [],
            "name": "l7-xlb-fw-allow-iap-hc",
            "network": "https://www.googleapis.com/compute/v1/projects/rcgnaecomoffshorepdp1000105852/global/networks/main",
            "priority": 1000,
            "project": "rcgnaecomoffshorepdp1000105852",
            "self_link": "https://www.googleapis.com/compute/v1/projects/rcgnaecomoffshorepdp1000105852/global/firewalls/l7-xlb-fw-allow-iap-hc",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16",
              "35.235.240.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-web-health-check",
              "http-app-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.google_compute_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw-ilb-to-backends",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443",
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-07-17T08:04:47.770-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/rcgnaecomoffshorepdp1000105852/global/firewalls/l7-ilb-fw-allow-ilb-to-backends",
            "log_config": [],
            "name": "l7-ilb-fw-allow-ilb-to-backends",
            "network": "https://www.googleapis.com/compute/v1/projects/rcgnaecomoffshorepdp1000105852/global/networks/main",
            "priority": 1000,
            "project": "rcgnaecomoffshorepdp1000105852",
            "self_link": "https://www.googleapis.com/compute/v1/projects/rcgnaecomoffshorepdp1000105852/global/firewalls/l7-ilb-fw-allow-ilb-to-backends",
            "source_ranges": [
              "10.154.5.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http-app-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.google_compute_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "l7_ilb_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "creation_timestamp": "2022-07-17T08:06:23.912-07:00",
            "id": "projects/rcgnaecomoffshorepdp1000105852/regions/europe-west2/forwardingRules/l7-ilb-forwarding-rule",
            "ip_address": "10.154.4.8",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "INTERNAL_MANAGED",
            "name": "l7-ilb-forwarding-rule",
            "network": "projects/rcgnaecomoffshorepdp1000105852/global/networks/main",
            "network_tier": "PREMIUM",
            "port_range": "80",
            "project": "rcgnaecomoffshorepdp1000105852",
            "region": "europe-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/rcgnaecomoffshorepdp1000105852/regions/europe-west2/forwardingRules/l7-ilb-forwarding-rule",
            "subnetwork": "projects/rcgnaecomoffshorepdp1000105852/regions/europe-west2/subnetworks/private-subnet-2",
            "target": "projects/rcgnaecomoffshorepdp1000105852/regions/europe-west2/targetHttpProxies/l7-ilb-target-http-proxy"
          },
          "dependencies": [
            "module.networking.data.google_compute_zones.available",
            "module.networking.google_compute_health_check.autohealing",
            "module.networking.google_compute_instance_template.vm_app_template",
            "module.networking.google_compute_network.main",
            "module.networking.google_compute_region_backend_service.default",
            "module.networking.google_compute_region_instance_group_manager.vm_app_igm",
            "module.networking.google_compute_region_target_http_proxy.default",
            "module.networking.google_compute_region_url_map.default",
            "module.networking.google_compute_subnetwork.private_subnet_2",
            "module.networking.google_compute_subnetwork.proxy_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.102.189.33",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-07-16T12:28:30.659-07:00",
            "id": "projects/rcgnaecomoffshorepdp1000105852/global/addresses/l7-xlb-static-ip",
            "name": "l7-xlb-static-ip",
            "prefix_length": 0,
            "project": "rcgnaecomoffshorepdp1000105852",
            "self_link": "https://www.googleapis.com/compute/v1/projects/rcgnaecomoffshorepdp1000105852/global/addresses/l7-xlb-static-ip"
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_ip_address",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.247.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2022-07-16T12:28:52.684-07:00",
            "id": "projects/rcgnaecomoffshorepdp1000105852/global/addresses/private-ip-address",
            "name": "private-ip-address",
            "network": "https://www.googleapis.com/compute/v1/projects/rcgnaecomoffshorepdp1000105852/global/networks/main",
            "prefix_length": 16,
            "project": "rcgnaecomoffshorepdp1000105852",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/rcgnaecomoffshorepdp1000105852/global/addresses/private-ip-address"
          },
          "dependencies": [
            "module.networking.google_compute_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/rcgnaecomoffshorepdp1000105852/global/forwardingRules/l7-xlb-forwarding-rule-8",
            "ip_address": "projects/rcgnaecomoffshorepdp1000105852/global/addresses/l7-xlb-static-ip",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "l7-xlb-forwarding-rule-8",
            "port_range": "80",
            "project": "rcgnaecomoffshorepdp1000105852",
            "self_link": "https://www.googleapis.com/compute/v1/projects/rcgnaecomoffshorepdp1000105852/global/forwardingRules/l7-xlb-forwarding-rule-8",
            "target": "projects/rcgnaecomoffshorepdp1000105852/global/targetHttpProxies/l7-xlb-target-http-proxy-8"
          },
          "dependencies": [
            "module.networking.data.google_compute_zones.available",
            "module.networking.google_compute_backend_service.default",
            "module.networking.google_compute_global_address.default",
            "module.networking.google_compute_health_check.autohealing",
            "module.networking.google_compute_instance_template.vm_web_template",
            "module.networking.google_compute_network.main",
            "module.networking.google_compute_region_instance_group_manager.vm_web_igm",
            "module.networking.google_compute_security_policy.policy",
            "module.networking.google_compute_subnetwork.private_subnet_1",
            "module.networking.google_compute_target_http_proxy.default",
            "module.networking.google_compute_url_map.default"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/rcgnaecomoffshorepdp1000105852/global/networks/main",
            "mtu": 0,
            "name": "main",
            "project": "rcgnaecomoffshorepdp1000105852",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/rcgnaecomoffshorepdp1000105852/global/networks/main"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_region_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "failover": false,
                "group": "https://www.googleapis.com/compute/v1/projects/rcgnaecomoffshorepdp1000105852/regions/europe-west2/instanceGroups/l7-ilb-mig1",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 0,
            "creation_timestamp": "2022-07-17T08:05:35.370-07:00",
            "enable_cdn": false,
            "fingerprint": "Ohe-DUWKxpA=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/rcgnaecomoffshorepdp1000105852/global/healthChecks/autohealing-health-check"
            ],
            "id": "projects/rcgnaecomoffshorepdp1000105852/regions/europe-west2/backendServices/l7-ilb-backend-subnet",
            "load_balancing_scheme": "INTERNAL_MANAGED",
            "name": "l7-ilb-backend-subnet",
            "port_name": "http",
            "project": "rcgnaecomoffshorepdp1000105852",
            "protocol": "HTTP",
            "region": "europe-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/rcgnaecomoffshorepdp1000105852/regions/europe-west2/backendServices/l7-ilb-backend-subnet",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "module.networking.data.google_compute_zones.available",
            "module.networking.google_compute_health_check.autohealing",
            "module.networking.google_compute_instance_template.vm_app_template",
            "module.networking.google_compute_network.main",
            "module.networking.google_compute_region_instance_group_manager.vm_app_igm",
            "module.networking.google_compute_subnetwork.private_subnet_2"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_region_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-07-17T08:06:08.880-07:00",
            "default_service": "https://www.googleapis.com/compute/v1/projects/rcgnaecomoffshorepdp1000105852/regions/europe-west2/backendServices/l7-ilb-backend-subnet",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "ywzg2o51OQg=",
            "host_rule": [],
            "id": "projects/rcgnaecomoffshorepdp1000105852/regions/europe-west2/urlMaps/l7-ilb-regional-url-map",
            "map_id": 6616908863708437391,
            "name": "l7-ilb-regional-url-map",
            "path_matcher": [],
            "project": "rcgnaecomoffshorepdp1000105852",
            "region": "europe-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/rcgnaecomoffshorepdp1000105852/regions/europe-west2/urlMaps/l7-ilb-regional-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.data.google_compute_zones.available",
            "module.networking.google_compute_health_check.autohealing",
            "module.networking.google_compute_instance_template.vm_app_template",
            "module.networking.google_compute_network.main",
            "module.networking.google_compute_region_backend_service.default",
            "module.networking.google_compute_region_instance_group_manager.vm_app_igm",
            "module.networking.google_compute_subnetwork.private_subnet_2"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "CUSTOM",
                "asn": 64514,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2022-07-16T12:28:53.162-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/rcgnaecomoffshorepdp1000105852/regions/europe-west2/routers/router",
            "name": "router",
            "network": "https://www.googleapis.com/compute/v1/projects/rcgnaecomoffshorepdp1000105852/global/networks/main",
            "project": "rcgnaecomoffshorepdp1000105852",
            "region": "europe-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/rcgnaecomoffshorepdp1000105852/regions/europe-west2/routers/router"
          },
          "dependencies": [
            "module.networking.google_compute_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "rcgnaecomoffshorepdp1000105852/europe-west2/router/nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "rcgnaecomoffshorepdp1000105852",
            "region": "europe-west2",
            "router": "router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.networking.google_compute_network.main",
            "module.networking.google_compute_router.router"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_security_policy",
      "name": "policy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "advanced_options_config": [],
            "description": "",
            "fingerprint": "opHB4N2MKuA=",
            "id": "projects/rcgnaecomoffshorepdp1000105852/global/securityPolicies/my-policy",
            "name": "my-policy",
            "project": "rcgnaecomoffshorepdp1000105852",
            "rule": [
              {
                "action": "allow",
                "description": "default rule",
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "*"
                        ]
                      }
                    ],
                    "expr": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preview": false,
                "priority": 2147483647
              },
              {
                "action": "deny(403)",
                "description": "Deny access to IPs in 35.246.125.70/32",
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "35.246.125.70/32"
                        ]
                      }
                    ],
                    "expr": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preview": false,
                "priority": 1000
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/rcgnaecomoffshorepdp1000105852/global/securityPolicies/my-policy",
            "timeouts": null,
            "type": "CLOUD_ARMOR"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-07-16T12:28:54.166-07:00",
            "gateway_address": "10.154.3.1",
            "id": "projects/rcgnaecomoffshorepdp1000105852/regions/europe-west2/subnetworks/private-subnet-1",
            "ip_cidr_range": "10.154.3.0/24",
            "name": "private-subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/rcgnaecomoffshorepdp1000105852/global/networks/main",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "rcgnaecomoffshorepdp1000105852",
            "purpose": "PRIVATE",
            "region": "europe-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/rcgnaecomoffshorepdp1000105852/regions/europe-west2/subnetworks/private-subnet-1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.networking.google_compute_network.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-07-16T12:28:53.984-07:00",
            "gateway_address": "10.154.4.1",
            "id": "projects/rcgnaecomoffshorepdp1000105852/regions/europe-west2/subnetworks/private-subnet-2",
            "ip_cidr_range": "10.154.4.0/24",
            "name": "private-subnet-2",
            "network": "https://www.googleapis.com/compute/v1/projects/rcgnaecomoffshorepdp1000105852/global/networks/main",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "rcgnaecomoffshorepdp1000105852",
            "purpose": "PRIVATE",
            "region": "europe-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/rcgnaecomoffshorepdp1000105852/regions/europe-west2/subnetworks/private-subnet-2",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.networking.google_compute_network.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "proxy_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-07-17T08:04:48.696-07:00",
            "gateway_address": "10.154.5.1",
            "id": "projects/rcgnaecomoffshorepdp1000105852/regions/europe-west2/subnetworks/l7-ilb-proxy-subnet",
            "ip_cidr_range": "10.154.5.0/24",
            "name": "l7-ilb-proxy-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/rcgnaecomoffshorepdp1000105852/global/networks/main",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "rcgnaecomoffshorepdp1000105852",
            "purpose": "INTERNAL_HTTPS_LOAD_BALANCER",
            "region": "europe-west2",
            "role": "ACTIVE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/rcgnaecomoffshorepdp1000105852/regions/europe-west2/subnetworks/l7-ilb-proxy-subnet"
          },
          "dependencies": [
            "module.networking.google_compute_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-07-17T04:40:37.907-07:00",
            "id": "projects/rcgnaecomoffshorepdp1000105852/global/targetHttpProxies/l7-xlb-target-http-proxy-8",
            "name": "l7-xlb-target-http-proxy-8",
            "project": "rcgnaecomoffshorepdp1000105852",
            "proxy_bind": false,
            "proxy_id": 573417779726535642,
            "self_link": "https://www.googleapis.com/compute/v1/projects/rcgnaecomoffshorepdp1000105852/global/targetHttpProxies/l7-xlb-target-http-proxy-8",
            "url_map": "https://www.googleapis.com/compute/v1/projects/rcgnaecomoffshorepdp1000105852/global/urlMaps/l7-xlb-url-map-8"
          },
          "dependencies": [
            "module.networking.data.google_compute_zones.available",
            "module.networking.google_compute_backend_service.default",
            "module.networking.google_compute_health_check.autohealing",
            "module.networking.google_compute_instance_template.vm_web_template",
            "module.networking.google_compute_network.main",
            "module.networking.google_compute_region_instance_group_manager.vm_web_igm",
            "module.networking.google_compute_security_policy.policy",
            "module.networking.google_compute_subnetwork.private_subnet_1",
            "module.networking.google_compute_url_map.default"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-07-17T04:40:26.080-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/rcgnaecomoffshorepdp1000105852/global/backendServices/l7-xlb-backend-service-8",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "UpLOPeVEXNc=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/rcgnaecomoffshorepdp1000105852/global/urlMaps/l7-xlb-url-map-8",
            "map_id": 3054514343883197381,
            "name": "l7-xlb-url-map-8",
            "path_matcher": [],
            "project": "rcgnaecomoffshorepdp1000105852",
            "self_link": "https://www.googleapis.com/compute/v1/projects/rcgnaecomoffshorepdp1000105852/global/urlMaps/l7-xlb-url-map-8",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.data.google_compute_zones.available",
            "module.networking.google_compute_backend_service.default",
            "module.networking.google_compute_health_check.autohealing",
            "module.networking.google_compute_instance_template.vm_web_template",
            "module.networking.google_compute_network.main",
            "module.networking.google_compute_region_instance_group_manager.vm_web_igm",
            "module.networking.google_compute_security_policy.policy",
            "module.networking.google_compute_subnetwork.private_subnet_1"
          ]
        }
      ]
    }
  ]
}